--- a/ZHANG.ipynb
+++ b/ZHANG.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPZFiPg6ECdREpUQypdCjdv",
+      "authorship_tag": "ABX9TyP+yI5dlbXVa0KV/z7tOzvq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -63,15 +63,42 @@
     {
       "cell_type": "code",
       "source": [
-        "#!git clone https://github.com/melzismn/ComputerRobotVision images\n",
-        "#from PIL import Image\n",
-        "#Image.open('images/DLTtestImage.jpg')"
+        "!git clone https://github.com/melzismn/ComputerRobotVision/images zhang\n",
+        "from PIL import Image\n",
+        "Image.open('zhang/zhang1.jpg')"
       ],
       "metadata": {
-        "id": "kF8rAE4nv-Z_"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 373
+        },
+        "id": "kF8rAE4nv-Z_",
+        "outputId": "74f574e0-fd25-4279-9650-3d440eb7251c"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Cloning into 'zhang'...\n",
+            "remote: Not Found\n",
+            "fatal: repository 'https://github.com/melzismn/ComputerRobotVision/images/' not found\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "FileNotFoundError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-6-af2ef14412c5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mget_ipython\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msystem\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'git clone https://github.com/melzismn/ComputerRobotVision/images zhang'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mPIL\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mImage\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mImage\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'zhang/zhang1.jpg'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/PIL/Image.py\u001b[0m in \u001b[0;36mopen\u001b[0;34m(fp, mode)\u001b[0m\n\u001b[1;32m   2841\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2842\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mfilename\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2843\u001b[0;31m         \u001b[0mfp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbuiltins\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"rb\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2844\u001b[0m         \u001b[0mexclusive_fp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2845\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'zhang/zhang1.jpg'"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -94,7 +121,7 @@
       "metadata": {
         "id": "6MlGrrMbviGL"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -117,7 +144,7 @@
       "metadata": {
         "id": "qhTK19DdwQB3"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -135,7 +162,7 @@
         "world_points = [] \n",
         "image_points = [] \n",
         "\n",
-        "images = glob.glob('.\\immagini\\*.jpg')\n",
+        "images = glob.glob('.\\immagini\\zhang\\*.jpg')\n",
         "\n",
         "image_size = None\n",
         "used_images = []\n",
@@ -165,7 +192,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# calibriamo con il codice di cv2"
+        "# Calibriamo con il codice di cv2"
       ],
       "metadata": {
         "id": "T-qDWWOlwgd3"
